array.island.Island.scala.error
Erreur de compilation :
Island:4: error: '=' expected but ';' found.
  for (k <- 0 to num.size){   //parcours de la liste
^